syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rideApp.location";

service LocationService {

  // Driver sends continuous location updates
  rpc StreamDriverLocation(stream LocationUpdate)
      returns (Ack);

  // Matching service queries nearby drivers
  rpc FindNearbyDrivers(NearbyDriversRequest)
      returns (NearbyDriversResponse);
}

message LocationUpdate {
  string driver_id = 1;
  double lat = 2;
  double lng = 3;
  bool available = 4;
}

message NearbyDriversRequest {
  double lat = 1;
  double lng = 2;
  int32 radius_meters = 3;
  int32 limit = 4;
}

message NearbyDriversResponse {
  repeated string driver_ids = 1;
}

message Ack {
  bool success = 1;
}
